// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Footer> > renders and matches snapshot 1`] = `
<div>
  <footer
    class="_footer_0a5567 _testFixMargin_0a5567"
  >
    <div
      class="_markdown_101724 _inline_101724"
    >
      Simple
    </div>
  </footer>
</div>
`;

exports[`<Footer> > renders and matches snapshot with two links 1`] = `
<div>
  <footer
    class="_footer_0a5567 _testFixMargin_0a5567"
  >
    <ul
      class="_list_0a5567"
    >
      <li
        class="_markdown_101724 _inline_101724"
      >
        Two links
      </li>
      <li
        class="_markdown_101724 _inline_101724"
      >
        <a
          href="https://www.jwplayer.com/"
          rel="noopener"
          target="_blank"
        >
          jwplayer.com
        </a>
      </li>
      <li
        class="_markdown_101724 _inline_101724"
      >
        <a
          href="https://www.jwplayer.com/"
          rel="noopener"
          target="_blank"
        >
          jwplayer.com
        </a>
      </li>
    </ul>
  </footer>
</div>
`;

exports[`<Footer> > renders and matches snapshot without links 1`] = `
<div>
  <footer
    class="_footer_0a5567 _testFixMargin_0a5567"
  >
    <ul
      class="_list_0a5567"
    >
      <li
        class="_markdown_101724 _inline_101724"
      >
        Text one
      </li>
      <li
        class="_markdown_101724 _inline_101724"
      >
        Text two
      </li>
    </ul>
  </footer>
</div>
`;
